commit file throug Batch

--- a/nav.html
+++ b/nav.html
@@ -203,8 +203,13 @@
                       <li><a target="_blank" rel="nofollow" href="http://www.kindlepush.com" title="Kindle推">Kindle推</a></li>
                       <li><a target="_blank" rel="nofollow" href="http://www.ireadweek.com/" title="周读">周读</a></li>
                       <li><a target="_blank" rel="nofollow" href="http://mebook.cc/" title="我的读书小屋">我的读书小屋</a></li>
-                      <li><a target="_blank" rel="nofollow" href="http://www.Google.com" title="Google">xxxx</a></li>
-                      <li><a target="_blank" rel="nofollow" href="http://www.Google.com" title="Google">xxxx</a></li>
+                      <li><a target="_blank" rel="nofollow" href="http://www.bdyso.com/" title="百度云搜索">百度云搜索</a></li>
+                      <li><a target="_blank" rel="nofollow" href="http://www.xiazaij.com" title="下载街">下载街</a></li>
+                      <li><a target="_blank" rel="nofollow" href="http://www.wwaaffxx.com" title="我爱分享">我爱分享</a></li>
+                      <li><a target="_blank" rel="nofollow" href="http://www.codesoso.com" title="源码搜搜">源码搜搜</a></li>
+                      <li><a target="_blank" rel="nofollow" href="http://ifkdy.com" title="疯狂影视搜">疯狂影视搜</a></li>
+                      <li><a target="_blank" rel="nofollow" href="http://www.0daydown.com" title="0daydown">0daydown</a></li>
+                      <li><a target="_blank" rel="nofollow" href="http://www.zdfans.com" title="破解软件">破解软件</a></li>
                       <li><a target="_blank" rel="nofollow" href="http://search.chongbuluo.com" title="虫部落快搜">虫部落快搜</a></li>
                       <li><a target="_blank" rel="nofollow" href="http://magnet.chongbuluo.com" title="虫部落资源搜">虫部落资源搜</a></li>
                       <li><a target="_blank" rel="nofollow" href="http://image.chongbuluo.com" title="虫部落素材搜">虫部落素材搜</a></li>
@@ -264,6 +269,7 @@
                         <li><a target="_blank" rel="nofollow" href="http://themes.jekyllrc.org/">Jekyll主题1</a></li>
                         <li><a target="_blank" rel="nofollow" href="http://jekyllthemes.org/">Jekyll主题2</a></li>
                         <li><a target="_blank" rel="nofollow" href="http://www.jekyllthemes.io/">Jekyll收费主题</a></li>
+                        <li><a target="_blank" rel="nofollow" href="http://octopress.org/">octopress</a></li>
                     </ul>
                 </dd>
             </dl>
