--- a/nav.html
+++ b/nav.html
@@ -289,6 +289,8 @@
                         <li><a target="_blank" rel="nofollow" href="https://mirrors.tuna.tsinghua.edu.cn/help/anaconda/" title="清华镜像">清华镜像</a></li>
                         <li><a target="_blank" rel="nofollow" href="http://www.ttmeiju.com" title="天天美剧">天天美剧</a></li>
                         <li><a target="_blank" rel="nofollow" href="http://www.cnscg.com/" title="JacksonCode">圣城家园</a></li>
+			<li><a target="_blank" rel="nofollow" href="https://www.imeiju.cc" title="爱美剧">爱美剧</a></li>
+			<li><a target="_blank" rel="nofollow" href="https://www.meijutt.com" title="美剧天堂">美剧天堂</a></li>
                         <li><a target="_blank" rel="nofollow" href="http://www.cili88.com" title="账号:doteam，密码:cili88">磁力88</a></li>
                         <li><a target="_blank" rel="nofollow" href="http://www.1024bt.org" title="1024BT">1024BT</a></li>
                         <li><a target="_blank" rel="nofollow" href="http://www.bt1024.org" title="BT工厂">BT工厂</a></li>
