导航中新增知乎

--- a/nav.html
+++ b/nav.html
@@ -199,6 +199,7 @@
                       <li><a target="_blank" rel="nofollow" href="http://www.baidu.com" title="百度">百度</a></li>
                       <li><a target="_blank" rel="nofollow" href="http://www.bing.com" title="Bing">Bing</a></li>
                       <li><a target="_blank" rel="nofollow" href="http://www.Google.com" title="Google">Google</a></li>
+                      <li><a target="_blank" rel="nofollow" href="http://www.zhihu.com" title="Google">知乎</a></li>
                       <li><a target="_blank" rel="nofollow" href="https://www.jiumodiary.com" title="鸠摩捜书">鸠摩捜书</a></li>
                       <li><a target="_blank" rel="nofollow" href="http://www.kindlepush.com" title="Kindle推">Kindle推</a></li>
                       <li><a target="_blank" rel="nofollow" href="http://www.ireadweek.com/" title="周读">周读</a></li>
