--- a/nav.html
+++ b/nav.html
@@ -305,6 +305,7 @@
                         <li><a target="_blank" rel="nofollow" href="http://gg66gg.com">cgjg</a></li>
                         <li><a target="_blank" rel="nofollow" href="http://636zzz.com/">1111</a></li>
                         <li><a target="_blank" rel="nofollow" href="http://zzz767.com/">1111</a></li>
+                        <li><a target="_blank" rel="nofollow" href="https://www.hegrehunter.com">hegrehunter</a></li>
                     </ul>
                 </dd>
             </dl>
@@ -325,6 +326,7 @@
                         <li><a target="_blank" rel="nofollow" href="http://www.imooc.com/" title="免费的IT技能学习平台">慕课网</a></li>
                         <li><a target="_blank" rel="nofollow" href="http://www.icourse163.org/" title="中国大学慕课">中国大学慕课</a></li>
                         <li><a target="_blank" rel="nofollow" href="https://open.163.com/" title="网易公开课">网易公开课</a></li>
+                        <li><a target="_blank" rel="nofollow" href="https://www.bilibili.com" title="网易公开课">B站</a></li>
                         <li><a target="_blank" rel="nofollow" href="https://ke.qq.com/" title="腾讯课堂">腾讯课堂</a></li>
                         <li><a target="_blank" rel="nofollow" href="https://edu.aliyun.com/" title="阿里云大学">阿里云大学</a></li>
                         <li><a target="_blank" rel="nofollow" href="http://cn.udacity.com" title="Udacity">Udacity</a></li>
