--- a/nav.html
+++ b/nav.html
@@ -306,6 +306,15 @@
                         <li><a target="_blank" rel="nofollow" href="http://636zzz.com/">1111</a></li>
                         <li><a target="_blank" rel="nofollow" href="http://zzz767.com/">1111</a></li>
                         <li><a target="_blank" rel="nofollow" href="https://www.hegrehunter.com">hegrehunter</a></li>
+                        <li><a target="_blank" rel="nofollow" href="https://www.femjoyhunter.com/">femjoyhunter</a></li>
+                        <li><a target="_blank" rel="nofollow" href="https://www.xarthunter.com/">xarthunter</a></li>
+                        <li><a target="_blank" rel="nofollow" href="https://www.elitebabes.com/">elitebabes</a></li>
+                        <li><a target="_blank" rel="nofollow" href="https://www.gravurehunter.com/">gravurehunter</a></li>
+                        <li><a target="_blank" rel="nofollow" href="https://www.femangels.com/">femangels</a></li>
+                        <li><a target="_blank" rel="nofollow" href="https://www.w4bhub.com/">w4bhub</a></li>
+                        <li><a target="_blank" rel="nofollow" href="https://www.babehub.com/">babehub</a></li>
+                        <li><a target="_blank" rel="nofollow" href="https://www.jpbeauties.com/">jpbeauties</a></li>
+                        <li><a target="_blank" rel="nofollow" href="https://www.jperotica.com/">jperotica</a></li>
                     </ul>
                 </dd>
             </dl>
