增加磁力搜索聚合链接

--- a/nav.html
+++ b/nav.html
@@ -329,6 +329,7 @@
                         <li><a target="_blank" rel="nofollow" href="https://www.imeiju.cc" title="爱美剧">爱美剧</a></li>
                         <li><a target="_blank" rel="nofollow" href="https://www.meijutt.com" title="美剧天堂">美剧天堂</a></li>
                         <li><a target="_blank" rel="nofollow" href="https://gaoqing.fm/" title="高清电影">高清电影</a></li>
+                        <li><a target="_blank" rel="nofollow" href="https://biedian.me/" title="高清电影">磁力搜索聚合</a></li>
                         <li><a target="_blank" rel="nofollow" href="https://www.cilimao.cc" title="磁力猫">磁力猫</a></li>
                         <li><a target="_blank" rel="nofollow" href="http://www.cili88.com" title="账号:doteam，密码:cili88">磁力88</a></li>
                         <br>
