增加蓝菊花

--- a/nav.html
+++ b/nav.html
@@ -177,6 +177,7 @@
                       <li><a target="_blank" rel="nofollow" href="https://www.jiumodiary.com" title="鸠摩捜书">鸠摩捜书</a></li>
                       <li><a target="_blank" rel="nofollow" href="http://www.kindlepush.com" title="Kindle推">Kindle推</a></li>
                       <li><a target="_blank" rel="nofollow" href="http://www.ireadweek.com/" title="周读">周读</a></li>
+                      <li><a target="_blank" rel="nofollow" href="http://www.lanjuhua.com/" title="蓝菊花">蓝菊花</a></li>
                       <li><a target="_blank" rel="nofollow" href="http://mebook.cc/" title="我的读书小屋">我的读书小屋</a></li>
                       <li><a target="_blank" rel="nofollow" href="http://www.bdyso.com/" title="百度云搜索">百度云搜索</a></li>
                       <li><a target="_blank" rel="nofollow" href="http://www.xiazaij.com" title="下载街">下载街</a></li>
