--- a/nav.html
+++ b/nav.html
@@ -169,21 +169,35 @@
                     <ul class="cl">
                       <li><a target="_blank" rel="nofollow" href="https://jacksoncode.github.io" title="主页">主页-io</a></li>
                       <li><a target="_blank" rel="nofollow" href="http://codeclub.bid" title="主页">主页-new</a></li>
-                      <li><a target="_blank" rel="nofollow" href="https://www.dida365.com" title="滴答清单">滴答清单</a></li>
                       <li><a target="_blank" rel="nofollow" href="http://www.baidu.com" title="百度">百度</a></li>
                       <li><a target="_blank" rel="nofollow" href="http://www.bing.com" title="Bing">Bing</a></li>
                       <li><a target="_blank" rel="nofollow" href="http://www.Google.com" title="Google">Google</a></li>
-                      <li><a target="_blank" rel="nofollow" href="http://www.zhihu.com" title="Google">知乎</a></li>
+                      <li><a target="_blank" rel="nofollow" href="https://getitfree.cn/" title="正版中国">正版中国</a></li>
                       <li><a target="_blank" rel="nofollow" href="https://www.jiumodiary.com" title="鸠摩捜书">鸠摩捜书</a></li>
-                      <li><a target="_blank" rel="nofollow" href="http://www.kindlepush.com" title="Kindle推">Kindle推</a></li>
                       <li><a target="_blank" rel="nofollow" href="http://www.ireadweek.com/" title="周读">周读</a></li>
+                      <li><a target="_blank" rel="nofollow" href="https://book.shuyuzhe.com/" title="书语者">书语者</a></li>
+                      <li><a target="_blank" rel="nofollow" href="https://epubw.com/" title="ePUBW">ePUBW</a></li>
+                      <li><a target="_blank" rel="nofollow" href="https://www.kgbook.com/" title="苦瓜书盘">苦瓜书盘</a></li>
+                      <li><a target="_blank" rel="nofollow" href="https://bookfere.com/" title="书伴">书伴</a></li>
+                      <li><a target="_blank" rel="nofollow" href="http://cn.epubee.com/books/" title="ePUBee">ePUBee</a></li>
+                      <li><a target="_blank" rel="nofollow" href="http://dianzishu.renrensousuo.com/"
+                              title="众人搜索网">众人搜索网</a>
+                      </li>
+                      <li><a target="_blank" rel="nofollow" href="https://www.owllook.net/" title="owllook">owllook</a>
+                      </li>
+                      <li><a target="_blank" rel="nofollow" href="http://www.pdfbook.cn/" title="PDF书籍">PDF书籍</a></li>
+                      <li><a target="_blank" rel="nofollow" href="http://www.bestcbooks.com/" title="计算机书控">计算机书控</a></li>
+                      <li><a target="_blank" rel="nofollow" href="https://www.egouz.com/" title="网站推荐">网站推荐</a></li>
                       <li><a target="_blank" rel="nofollow" href="http://www.lanjuhua.com/" title="蓝菊花">蓝菊花</a></li>
                       <li><a target="_blank" rel="nofollow" href="http://mebook.cc/" title="我的读书小屋">我的读书小屋</a></li>
                       <li><a target="_blank" rel="nofollow" href="http://www.bdyso.com/" title="百度云搜索">百度云搜索</a></li>
+                      <li><a target="_blank" rel="nofollow" href="https://www.wowenda.com/" title="云网盘之家">云网盘之家</a></li>
+                      <li><a target="_blank" rel="nofollow" href="https://www.urlgot.net/" title="视频解析">视频解析</a></li>
                       <li><a target="_blank" rel="nofollow" href="http://www.xiazaij.com" title="下载街">下载街</a></li>
                       <li><a target="_blank" rel="nofollow" href="http://www.wwaaffxx.com" title="我爱分享">我爱分享</a></li>
                       <li><a target="_blank" rel="nofollow" href="http://www.codesoso.com" title="源码搜搜">源码搜搜</a></li>
                       <li><a target="_blank" rel="nofollow" href="http://ifkdy.com" title="疯狂影视搜">疯狂影视搜</a></li>
+                      <li><a target="_blank" rel="nofollow" href="http://videos.yizhansou.com" title="影视一站搜">影视一站搜</a></li>
                       <li><a target="_blank" rel="nofollow" href="http://www.0daydown.com" title="0daydown">0daydown</a></li>
                       <li><a target="_blank" rel="nofollow" href="http://www.zdfans.com" title="破解软件">破解软件</a></li>
                       <li><a target="_blank" rel="nofollow" href="http://search.chongbuluo.com" title="虫部落快搜">虫部落快搜</a></li>
@@ -240,9 +254,9 @@
                         <li><a target="_blank" rel="nofollow" href="https://www.cnblogs.com/" title="博客园">博客园</a></li>
                         <li><a target="_blank" rel="nofollow" href="https://www.csdn.net/" title="CSDN">CSDN</a></li>
                         <li><a target="_blank" rel="nofollow" href="https://www.oschina.net/" title="开源中国">开源中国</a></li>
-                        <li><a target="_blank" rel="nofollow" href="http://www.jianshu.com/" title="写作软件、阅读社区">简书</a></li>                        
-                        <li><a target="_blank" rel="nofollow" href="https://www.douban.com/" title="豆瓣">豆瓣</a></li>
+                        <li><a target="_blank" rel="nofollow" href="http://www.jianshu.com/" title="写作软件、阅读社区">简书</a></li>
                         <li><a target="_blank" rel="nofollow" href="https://www.zhihu.com">知乎</a></li>
+                        <li><a target="_blank" rel="nofollow" href="https://www.douban.com/" title="豆瓣">豆瓣</a></li>                        
                         <li><a target="_blank" rel="nofollow" href="https://mp.weixin.qq.com/">微信公众号</a></li>
                     </ul>
                 </dd>
@@ -265,8 +279,10 @@
                                 title="Python3.6官方文档">Python3.6官方文档</a></li>
                         <li><a target="_blank" rel="nofollow" href="https://learnku.com/python/docs">Python文档翻译</a></li>
                         <li><a target="_blank" rel="nofollow" href="http://www.pythondoc.com/">Python中文学习大本营</a></li>
+                        <li><a target="_blank" rel="nofollow" href="https://docs.pythontab.com/">Python手册中心</a></li>
                         <li><a target="_blank" rel="nofollow" href="https://docs.python.org/zh-cn/3.8/">Python官方文档-v3.8</a></li>
                         <li><a target="_blank" rel="nofollow" href="https://xue.cn/">XUE.CN</a></li>
+                        <li><a target="_blank" rel="nofollow" href="https://leetcode-cn.com/">LeetCode中文</a></li>
                     </ul>
                 </dd>
             </dl>
