--- a/nav.html
+++ b/nav.html
@@ -323,11 +323,12 @@
                         <li><a target="_blank" rel="nofollow" href="http://www.ttmeiju.com" title="天天美剧">天天美剧</a></li>
                         <li><a target="_blank" rel="nofollow" href="http://www.cnscg.com/" title="JacksonCode">圣城家园</a></li>
                         <li><a target="_blank" rel="nofollow" href="https://www.imeiju.cc" title="爱美剧">爱美剧</a></li>
-                        <li><a target="_blank" rel="nofollow" href="https://www.meijutt.com" title="美剧天堂">美剧天堂</a></li>
+                        <li><a target="_blank" rel="nofollow" href="https://www.meijutt.tv" title="美剧天堂">美剧天堂</a></li>
                         <li><a target="_blank" rel="nofollow" href="https://gaoqing.fm/" title="高清电影">高清电影</a></li>
                         <li><a target="_blank" rel="nofollow" href="https://biedian.me/" title="高清电影">磁力搜索聚合</a></li>
                         <li><a target="_blank" rel="nofollow" href="https://www.cilimao.cc" title="磁力猫">磁力猫</a></li>
                         <li><a target="_blank" rel="nofollow" href="http://www.cili88.com" title="账号:doteam，密码:cili88">磁力88</a></li>
+                        <li><a target="_blank" rel="nofollow" href="https://cg.163.com/" title="网易云游戏">网易云游戏</a></li>
                         <br>
                         <li><a target="_blank" rel="nofollow" href="https://333pen.com">333pen</a></li>
                         <li><a target="_blank" rel="nofollow" href="http://www.meitulu.cn/">美图录</a></li>
