--- a/nav.html
+++ b/nav.html
@@ -261,6 +261,23 @@
                     </ul>
                 </dd>
             </dl>
+
+            <dl class="sitelist_1 cl">
+                <dt class="l">世界那么大</dt>
+                <dd>
+                    <ul class="cl">
+                        
+                        <li><a target="_blank" rel="nofollow" href="https://www.tampermonkey.net/" title="油猴官网">油猴官网</a></li>
+                        <li><a target="_blank" rel="nofollow" href="https://greasyfork.org/zh-CN" title="油猴扩展脚本">油猴扩展脚本</a></li>
+                        <li><a target="_blank" rel="nofollow" href="https://openuserjs.org/" title="英文脚本">英文脚本</a></li>
+                        <li><a target="_blank" rel="nofollow" href="http://www.jianshu.com/" title="写作软件、阅读社区">简书</a></li>
+                        <li><a target="_blank" rel="nofollow" href="https://www.zhihu.com">知乎</a></li>
+                        <li><a target="_blank" rel="nofollow" href="https://www.douban.com/" title="豆瓣">豆瓣</a></li>                        
+                        <li><a target="_blank" rel="nofollow" href="https://mp.weixin.qq.com/">微信公众号</a></li>
+                    </ul>
+                </dd>
+            </dl>
+
             <dl class="sitelist_1 cl">
                 <dt class="l">Python</dt>
                 <dd>
