--- a/nav.html
+++ b/nav.html
@@ -174,7 +174,7 @@
                       <li><a target="_blank" rel="nofollow" href="http://www.Google.com" title="Google">Google</a></li>
                       <li><a target="_blank" rel="nofollow" href="https://getitfree.cn/" title="正版中国">正版中国</a></li>
                       <li><a target="_blank" rel="nofollow" href="https://www.jiumodiary.com" title="鸠摩捜书">鸠摩捜书</a></li>
-                      <li><a target="_blank" rel="nofollow" href="http://www.ireadweek.com/" title="周读">周读</a></li>
+                      <li><a target="_blank" rel="nofollow" href="http://www.newireadweek.com/" title="周读">周读</a></li>
                       <li><a target="_blank" rel="nofollow" href="https://book.shuyuzhe.com/" title="书语者">书语者</a></li>
                       <li><a target="_blank" rel="nofollow" href="https://epubw.com/" title="ePUBW">ePUBW</a></li>
                       <li><a target="_blank" rel="nofollow" href="https://www.kgbook.com/" title="苦瓜书盘">苦瓜书盘</a></li>
@@ -374,6 +374,23 @@
                         <li><a target="_blank" rel="nofollow" href="http://jekyllthemes.org/">Jekyll主题2</a></li>
                         <li><a target="_blank" rel="nofollow" href="http://www.jekyllthemes.io/">Jekyll收费主题</a></li>
                         <li><a target="_blank" rel="nofollow" href="http://octopress.org/">octopress</a></li>
+                    </ul>
+                </dd>
+            </dl>
+
+            <dl class="sitelist_1 cl">
+                <dt class="l">镜像源</dt>
+                <dd>
+                    <ul class="cl">
+                        <li><a target="_blank" rel="nofollow" href="https://developer.aliyun.com/mirror/" title="阿里官方镜像">阿里官方镜像</a></li>
+                        <li><a target="_blank" rel="nofollow" href="http://mirrors.aliyun.com/ubuntu/dists/">阿里Ubuntu</a></li>
+                        <li><a target="_blank" rel="nofollow" href="https://mirrors.huaweicloud.com/">华为镜像源</a></li>
+                        <li><a target="_blank" rel="nofollow" href="https://mirrors.tencent.com/">腾讯镜像源</a></li>
+                        <li><a target="_blank" rel="nofollow" href="https://mirrors.tuna.tsinghua.edu.cn/">清华镜像源</a></li>
+                        <li><a target="_blank" rel="nofollow" href="http://mirrors.163.com/">网易镜像源</a></li>
+                        <li><a target="_blank" rel="nofollow" href="http://mirrors.ustc.edu.cn/">中科大镜像源</a></li>
+                        <li><a target="_blank" rel="nofollow" href="http://mirrors.zju.edu.cn/">浙大镜像源</a></li>
+                        <li><a target="_blank" rel="nofollow" href="http://mirrors.ustc.edu.cn/">中科大镜像源</a></li>
                     </ul>
                 </dd>
             </dl>
