新增磁力链

--- a/nav.html
+++ b/nav.html
@@ -359,6 +359,18 @@
                         <li><a target="_blank" rel="nofollow" href="https://www.babehub.com/">babehub</a></li>
                         <li><a target="_blank" rel="nofollow" href="https://www.jpbeauties.com/">jpbeauties</a></li>
                         <li><a target="_blank" rel="nofollow" href="https://www.jperotica.com/">jperotica</a></li>
+                        <br>
+                        <li><a target="_blank" rel="nofollow" href="https://www.no404.me/">no404</a></li>
+                        <li><a target="_blank" rel="nofollow" href="https://laowang29.icu/">老王磁力</a></li>
+                        <li><a target="_blank" rel="nofollow" href="https://skrbt37.icu/">skrbt37</a></li>
+                        <li><a target="_blank" rel="nofollow" href="https://www.tokyotosho.info/">tokyotosho</a></li>
+                        <li><a target="_blank" rel="nofollow" href="https://www.dalipan.com/">大力盘</a></li>
+                        <br>
+                        <li><a target="_blank" rel="nofollow" href="https://www.aimeijutt.com/">美剧天堂</a></li>
+                        <li><a target="_blank" rel="nofollow" href="http://www.languang.co/">蓝光网</a></li>
+                        <li><a target="_blank" rel="nofollow" href="http://www.jlpcn.net/">纪录片天地</a></li>
+                        <li><a target="_blank" rel="nofollow" href="https://www.yyetss.com/">人人影视</a></li>
+                        <li><a target="_blank" rel="nofollow" href="http://pianyuan.la/">片源网</a></li>
                     </ul>
                 </dd>
             </dl>
