--- a/nav.html
+++ b/nav.html
@@ -175,6 +175,7 @@
                       <li><a target="_blank" rel="nofollow" href="https://getitfree.cn/" title="正版中国">正版中国</a></li>
                       <li><a target="_blank" rel="nofollow" href="https://www.jiumodiary.com" title="鸠摩捜书">鸠摩捜书</a></li>
                       <li><a target="_blank" rel="nofollow" href="http://www.newireadweek.com/" title="周读">周读</a></li>
+                      <li><a target="_blank" rel="nofollow" href="https://ebook2.lorefree.com/" title="周读">LorFree-好用</a></li>
                       <li><a target="_blank" rel="nofollow" href="https://book.shuyuzhe.com/" title="书语者">书语者</a></li>
                       <li><a target="_blank" rel="nofollow" href="https://epubw.com/" title="ePUBW">ePUBW</a></li>
                       <li><a target="_blank" rel="nofollow" href="https://www.kgbook.com/" title="苦瓜书盘">苦瓜书盘</a></li>
