--- a/nav.html
+++ b/nav.html
@@ -175,6 +175,7 @@
                       <li><a target="_blank" rel="nofollow" href="https://getitfree.cn/" title="正版中国">正版中国</a></li>
                       <li><a target="_blank" rel="nofollow" href="https://www.jiumodiary.com" title="鸠摩捜书">鸠摩捜书</a></li>
                       <li><a target="_blank" rel="nofollow" href="http://www.newireadweek.com/" title="周读">周读</a></li>
+                      <li><a target="_blank" rel="nofollow" href="https://kindleer.com/" title="kindleer">kindleer-书多</a></li>
                       <li><a target="_blank" rel="nofollow" href="https://ebook2.lorefree.com/" title="周读">LorFree-好用</a></li>
                       <li><a target="_blank" rel="nofollow" href="https://book.shuyuzhe.com/" title="书语者">书语者</a></li>
                       <li><a target="_blank" rel="nofollow" href="https://epubw.com/" title="ePUBW">ePUBW</a></li>
@@ -257,6 +258,8 @@
                         <li><a target="_blank" rel="nofollow" href="https://www.oschina.net/" title="开源中国">开源中国</a></li>
                         <li><a target="_blank" rel="nofollow" href="http://www.jianshu.com/" title="写作软件、阅读社区">简书</a></li>
                         <li><a target="_blank" rel="nofollow" href="https://www.zhihu.com">知乎</a></li>
+                        <li><a target="_blank" rel="nofollow" href="https://www.dedao.cn">得到</a></li>
+                        <li><a target="_blank" rel="nofollow" href="https://weread.qq.com">微信读书</a></li>
                         <li><a target="_blank" rel="nofollow" href="https://www.douban.com/" title="豆瓣">豆瓣</a></li>                        
                         <li><a target="_blank" rel="nofollow" href="https://mp.weixin.qq.com/">微信公众号</a></li>
                     </ul>
@@ -348,6 +351,7 @@
                         <li><a target="_blank" rel="nofollow" href="http://www.cili88.com" title="账号:doteam，密码:cili88">磁力88</a></li>
                         <li><a target="_blank" rel="nofollow" href="https://cg.163.com/" title="网易云游戏">网易云游戏</a></li>
                         <br>
+                        <li><a target="_blank" rel="nofollow" href="https://xher.net/">xher</a></li>
                         <li><a target="_blank" rel="nofollow" href="https://333pen.com">333pen</a></li>
                         <li><a target="_blank" rel="nofollow" href="http://www.meitulu.cn/">美图录</a></li>
                         <li><a target="_blank" rel="nofollow" href="https://www.hegrehunter.com">hegrehunter</a></li>
