--- a/nav.html
+++ b/nav.html
@@ -376,6 +376,8 @@
                         <li><a target="_blank" rel="nofollow" href="http://www.jlpcn.net/">纪录片天地</a></li>
                         <li><a target="_blank" rel="nofollow" href="https://www.yyetss.com/">人人影视</a></li>
                         <li><a target="_blank" rel="nofollow" href="http://pianyuan.la/">片源网</a></li>
+                        <br>
+                        <li><a target="_blank" rel="nofollow" href="https://1fuli.club/">要福利</a></li>
                     </ul>
                 </dd>
             </dl>
