--- a/nav.html
+++ b/nav.html
@@ -262,6 +262,10 @@
                         <li><a target="_blank" rel="nofollow" href="https://weread.qq.com">微信读书</a></li>
                         <li><a target="_blank" rel="nofollow" href="https://www.douban.com/" title="豆瓣">豆瓣</a></li>                        
                         <li><a target="_blank" rel="nofollow" href="https://mp.weixin.qq.com/">微信公众号</a></li>
+                        <br>
+                        <li><a target="_blank" rel="nofollow" href="http://101.34.154.175:8888/">宝塔</a></li>
+                        <li><a target="_blank" rel="nofollow" href="http://101.34.154.175:8089/wp-admin">Word-Admin</a></li>
+                        <li><a target="_blank" rel="nofollow" href="http://101.34.154.175:8089/">WordPress</a></li>
                     </ul>
                 </dd>
             </dl>
