--- a/nav.html
+++ b/nav.html
@@ -295,6 +295,8 @@
 							<li><a target="_blank" rel="nofollow" href="https://ai-bot.cn">AI工具集</a></li>
 							<li><a target="_blank" rel="nofollow" href="https://chat.plus777.buzz/" title="豆瓣">chat</a></li>
 							<li><a target="_blank" rel="nofollow" href="https://xinghuo.xfyun.cn/desk">讯飞星火</a></li>
+							<li><a target="_blank" rel="nofollow" href="https://kimi.moonshot.cn/">Kimi</a></li>
+							<li><a target="_blank" rel="nofollow" href="https://chatglm.cn/">智谱清言</a></li>
 							<li><a target="_blank" rel="nofollow" href="https://yiyan.baidu.com/welcome">文心一言</a></li>
 							<li><a target="_blank" rel="nofollow" href="https://www.ailookme.com/">AI工具箱</a></li>
 							<li><a target="_blank" rel="nofollow" href="https://toolsdar.cn/">工具达人</a></li>
@@ -441,7 +443,7 @@
 							<li><a target="_blank" rel="nofollow" href="https://www.dalipan.com/">大力盘</a></li>
 							
 							<br>
-							<li><a target="_blank" rel="nofollow" href="https://1fuli.club/">要福利</a></li>
+							<li><a target="_blank" rel="nofollow" href="https://1fuli.life/">要福利</a></li>
 							<li><a target="_blank" rel="nofollow" href="https://www.aliyundrive.com/s/S5behgDdwWU">知识船舱26T</a></li>
 							<li><a target="_blank" rel="nofollow" href="https://www.alipansou.com/">阿里盘搜</a></li>
 							<li><a target="_blank" rel="nofollow" href="https://pan.alipanso.com/">UP云搜</a></li>
