更新AI常用工具

--- a/nav.html
+++ b/nav.html
@@ -293,10 +293,27 @@
 					<dd>
 						<ul class="cl">
 							<li><a target="_blank" rel="nofollow" href="https://ai-bot.cn">AI工具集</a></li>
-							<li><a target="_blank" rel="nofollow" href="https://chat.plus777.buzz/" title="豆瓣">chat</a></li>
+							<li><a target="_blank" rel="nofollow" href="https://chat.plus777.buzz/">chat</a></li>
 							<li><a target="_blank" rel="nofollow" href="https://xinghuo.xfyun.cn/desk">讯飞星火</a></li>
 							<li><a target="_blank" rel="nofollow" href="https://kimi.moonshot.cn/">Kimi</a></li>
 							<li><a target="_blank" rel="nofollow" href="https://chatglm.cn/">智谱清言</a></li>
+							<li><a target="_blank" rel="nofollow" href="https://www.doubao.com/chat/">豆包</a></li>
+							<li><a target="_blank" rel="nofollow" href="https://yuanbao.tencent.com/">腾讯元宝</a></li>
+							<li><a target="_blank" rel="nofollow" href="https://www.tiangong.cn/">天工AI</a></li>
+							<li><a target="_blank" rel="nofollow" href="https://tongyi.aliyun.com/">通义千问</a></li>
+							<li><a target="_blank" rel="nofollow" href="https://klingai.kuaishou.com/">可灵AI</a></li>
+							<li><a target="_blank" rel="nofollow" href="https://jimeng.jianying.com/ai-tool/home">即梦AI</a></li>
+							<li><a target="_blank" rel="nofollow" href="https://www.liblib.art/">LiblibAI</a></li>
+							<li><a target="_blank" rel="nofollow" href="https://www.coze.cn/">扣子Coze</a></li>
+							<li><a target="_blank" rel="nofollow" href="https://www.qiyuai.net/">奇域AI</a></li>
+							<li><a target="_blank" rel="nofollow" href="https://metaso.cn/">秘塔AI</a></li>
+							<li><a target="_blank" rel="nofollow" href="https://www.biji.com/note">Get笔记</a></li>
+							<li><a target="_blank" rel="nofollow" href="https://cp.baidu.com/">橙篇AI</a></li>
+							<li><a target="_blank" rel="nofollow" href="https://www.gaoding.com/ai">稿定AI</a></li>
+							<li><a target="_blank" rel="nofollow" href="https://tongyi.aliyun.com/farui">通义法睿</a></li>
+							<li><a target="_blank" rel="nofollow" href="https://www.processon.com/">ProcessOn思维</a></li>
+							<li><a target="_blank" rel="nofollow" href="https://www.aippt.cn/">AIPPT</a></li>
+							<li><a target="_blank" rel="nofollow" href="https://gamma.app/zh-cn">GammaAI</a></li>
 							<li><a target="_blank" rel="nofollow" href="https://yiyan.baidu.com/welcome">文心一言</a></li>
 							<li><a target="_blank" rel="nofollow" href="https://www.ailookme.com/">AI工具箱</a></li>
 							<li><a target="_blank" rel="nofollow" href="https://toolsdar.cn/">工具达人</a></li>
