--- a/nav.html
+++ b/nav.html
@@ -298,6 +298,8 @@
 							<li><a target="_blank" rel="nofollow" href="https://kimi.moonshot.cn/">Kimi</a></li>
 							<li><a target="_blank" rel="nofollow" href="https://chatglm.cn/">智谱清言</a></li>
 							<li><a target="_blank" rel="nofollow" href="https://www.doubao.com/chat/">豆包</a></li>
+							<li><a target="_blank" rel="nofollow" href="https://ima.qq.com/">IMA</a></li>
+							<li><a target="_blank" rel="nofollow" href="https://www.marscode.cn/">MarsCode</a></li>
 							<li><a target="_blank" rel="nofollow" href="https://yuanbao.tencent.com/">腾讯元宝</a></li>
 							<li><a target="_blank" rel="nofollow" href="https://www.tiangong.cn/">天工AI</a></li>
 							<li><a target="_blank" rel="nofollow" href="https://tongyi.aliyun.com/">通义千问</a></li>
