增加部分AI网址

--- a/nav.html
+++ b/nav.html
@@ -302,8 +302,14 @@
 							<li><a target="_blank" rel="nofollow" href="https://ima.qq.com/">IMA</a></li>
 							<li><a target="_blank" rel="nofollow" href="https://www.marscode.cn/">MarsCode</a></li>
 							<li><a target="_blank" rel="nofollow" href="https://yuanbao.tencent.com/">腾讯元宝</a></li>
+							<li><a target="_blank" rel="nofollow" href="https://www.sou.com/?src=se_platform">360AI搜索</a></li>
+							<li><a target="_blank" rel="nofollow" href="https://n.cn/?fromsou=1">纳米搜索</a></li>
+							<li><a target="_blank" rel="nofollow" href="https://metaso.cn/">秘塔搜索</a></li>
 							<li><a target="_blank" rel="nofollow" href="https://www.tiangong.cn/">天工AI</a></li>
 							<li><a target="_blank" rel="nofollow" href="https://tongyi.aliyun.com/">通义千问</a></li>
+							<li><a target="_blank" rel="nofollow" href="https://tongyi.aliyun.com/farui">通义法睿</a></li>
+							<li><a target="_blank" rel="nofollow" href="https://tongyi.aliyun.com/wanxiang/">通义万向</a></li>
+							<li><a target="_blank" rel="nofollow" href="https://tongyi.aliyun.com/efficiency/home">通义效率</a></li>
 							<li><a target="_blank" rel="nofollow" href="https://klingai.kuaishou.com/">可灵AI</a></li>
 							<li><a target="_blank" rel="nofollow" href="https://jimeng.jianying.com/ai-tool/home">即梦AI</a></li>
 							<li><a target="_blank" rel="nofollow" href="https://www.liblib.art/">LiblibAI</a></li>
@@ -312,8 +318,7 @@
 							<li><a target="_blank" rel="nofollow" href="https://metaso.cn/">秘塔AI</a></li>
 							<li><a target="_blank" rel="nofollow" href="https://www.biji.com/note">Get笔记</a></li>
 							<li><a target="_blank" rel="nofollow" href="https://cp.baidu.com/">橙篇AI</a></li>
-							<li><a target="_blank" rel="nofollow" href="https://www.gaoding.com/ai">稿定AI</a></li>
-							<li><a target="_blank" rel="nofollow" href="https://tongyi.aliyun.com/farui">通义法睿</a></li>
+							<li><a target="_blank" rel="nofollow" href="https://www.gaoding.com/ai">稿定AI</a></li>							
 							<li><a target="_blank" rel="nofollow" href="https://www.processon.com/">ProcessOn思维</a></li>
 							<li><a target="_blank" rel="nofollow" href="https://www.aippt.cn/">AIPPT</a></li>
 							<li><a target="_blank" rel="nofollow" href="https://gamma.app/zh-cn">GammaAI</a></li>
