--- a/nav.html
+++ b/nav.html
@@ -469,7 +469,7 @@
 							
 							<br>
 							<li><a target="_blank" rel="nofollow" href="https://1fuli.life/">要福利</a></li>
-							<li><a target="_blank" rel="nofollow" href="https://www.aliyundrive.com/s/S5behgDdwWU">知识船舱26T</a></li>
+							<li><a target="_blank" rel="nofollow" href="https://tuostudy.upnb.top/favorites/cangku/">图欧导航☆</a></li>
 							<li><a target="_blank" rel="nofollow" href="https://www.alipansou.com/">阿里盘搜</a></li>
 							<li><a target="_blank" rel="nofollow" href="https://pan.alipanso.com/">UP云搜</a></li>
 							<li><a target="_blank" rel="nofollow" href="https://www.niceso.fun/">奈斯搜索</a></li>
