修改为json自动加载模式

--- a/about.html
+++ b/about.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zh-CN">
 
 <head>
 
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="">
-    <meta name="author" content="">
+    <meta name="description" content="关于 Jackson - 一名热爱编程的开发者，分享技术心得与学习经验">
+    <meta name="keywords" content="关于我,程序员,开发者,Jackson,个人介绍">
+    <meta name="author" content="Jackson">
 
     <title>CodeClub</title>
     <link rel="icon" type="image/x-ico" href="./img/logo.png" />
