--- a/book.html
+++ b/book.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zh-CN">
 
 <head>
 
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="">
-    <meta name="author" content="">
+    <meta name="description" content="程序员推荐书单 - 精选Python、Java、JavaScript、Go、算法等优质编程图书">
+    <meta name="keywords" content="编程书籍,技术图书,Python书籍,Java书籍,算法书籍,程序员书单">
+    <meta name="author" content="Jackson">
 
     <title>CodeClub</title>
     <link rel="icon" type="image/x-ico" href="./img/logo.png" />
@@ -117,76 +118,76 @@
         </div>
         <hr />
         <ul class="book-list">
-            <li>
-                <a href="#"><img src="images/book/python-biancheng.png"/></a>
+            <li data-category="python">
+                <a href="#"><img src="images/book/python-biancheng.png" alt="Python编程：从入门到实践"/></a>
                 <p>Python编程：从入门到实践</p>
             </li>
-            <li>
-                <a href="#"><img src="images/book/python-bianchengkuaisushangshou.png"/></a>
+            <li data-category="python">
+                <a href="#"><img src="images/book/python-bianchengkuaisushangshou.png" alt="Python编程快速上手"/></a>
                 <p>Python编程快速上手——让繁琐的工作自动化</p>
             </li>
-            <li>
-                <a href="#"><img src="images/book/python-core-3rd.png"/></a>
+            <li data-category="python">
+                <a href="#"><img src="images/book/python-core-3rd.png" alt="Python核心编程第三版"/></a>
                 <p>Python核心编程，第三版</p>
             </li>
-            <li>
-                <a href="#"><img src="images/book/liuchangde-python.png"/></a>
+            <li data-category="python">
+                <a href="#"><img src="images/book/liuchangde-python.png" alt="流畅的Python"/></a>
                 <p>流畅的Python</p>
             </li>
-            <li>
-                <a href="#"><img src="images/book/html5-quanweizhinan.png"/></a>
+            <li data-category="html">
+                <a href="#"><img src="images/book/html5-quanweizhinan.png" alt="HTML5权威指南"/></a>
                 <p>HTML5权威指南</p>
             </li>
-            <li>
-                <a href="#"><img src="images/book/HTML5andCSS3-jichu-8th.png"/></a>
+            <li data-category="html">
+                <a href="#"><img src="images/book/HTML5andCSS3-jichu-8th.png" alt="HTML5与CSS3基础教程"/></a>
                 <p>Html5与CSS3基础教程，第八版</p>
             </li>
-            <li>
-                <a href="#"><img src="images/book/xiangyingshiweb-2th.png"/></a>
+            <li data-category="html">
+                <a href="#"><img src="images/book/xiangyingshiweb-2th.png" alt="响应式Web设计"/></a>
                 <p>响应式Web设计——Html5和CSS3实战，第二版</p>
             </li>
-            <li>
-                <a href="#"><img src="images/book/java-bianchengsixiang-4th.png"/></a>
+            <li data-category="java thinking">
+                <a href="#"><img src="images/book/java-bianchengsixiang-4th.png" alt="Java编程思想第四版"/></a>
                 <p>JAVA编程思想，第四版</p>
             </li>
-            <li>
-                <a href="#"><img src="images/book/java-core-1-9th.png"/></a>
+            <li data-category="java">
+                <a href="#"><img src="images/book/java-core-1-9th.png" alt="Java核心技术卷1"/></a>
                 <p>JAVA核心技术，卷1，第九版</p>
             </li>
-            <li>
-                <a href="#"><img src="images/book/java-core-2-9th.png"/></a>
+            <li data-category="java">
+                <a href="#"><img src="images/book/java-core-2-9th.png" alt="Java核心技术卷2"/></a>
                 <p>JAVA核心技术，卷2，第九版</p>
             </li>
-            <li>
-                <a href="#"><img src="images/book/javascript-quanweizhinan-6th.png"/></a>
+            <li data-category="javascript">
+                <a href="#"><img src="images/book/javascript-quanweizhinan-6th.png" alt="JavaScript权威指南"/></a>
                 <p>JavaScript权威指南，第六版</p>
             </li>
-            <li>
-                <a href="#"><img src="images/book/nibuzhidaode-js-up.png"/></a>
+            <li data-category="javascript">
+                <a href="#"><img src="images/book/nibuzhidaode-js-up.png" alt="你不知道的JavaScript上卷"/></a>
                 <p>你不知道的JS，上卷</p>
             </li>
-            <li>
-                <a href="#"><img src="images/book/nibuzhidaode-js-mid.png"/></a>
+            <li data-category="javascript">
+                <a href="#"><img src="images/book/nibuzhidaode-js-mid.png" alt="你不知道的JavaScript中卷"/></a>
                 <p>你不知道的JS，中卷</p>
             </li>
-            <li>
-                <a href="#"><img src="images/book/goyuyan-biancheng.png"/></a>
+            <li data-category="go">
+                <a href="#"><img src="images/book/goyuyan-biancheng.png" alt="Go语言编程"/></a>
                 <p>GO语言编程</p>
             </li>
-            <li>
-                <a href="#"><img src="images/book/suanfa-4th.png"/></a>
+            <li data-category="algorithm">
+                <a href="#"><img src="images/book/suanfa-4th.png" alt="算法第四版"/></a>
                 <p>算法，第四版</p>
             </li>
-            <li>
-                <a href="#"><img src="images/book/ahasuanfa.png"/></a>
+            <li data-category="algorithm">
+                <a href="#"><img src="images/book/ahasuanfa.png" alt="啊哈算法"/></a>
                 <p>啊哈，算法</p>
             </li>
-            <li>
-                <a href="#"><img src="images/book/chonggou.png"/></a>
+            <li data-category="thinking">
+                <a href="#"><img src="images/book/chonggou.png" alt="重构：改善既有代码的设计"/></a>
                 <p>重构，改善既有代码的设计</p>
             </li>
-            <li>
-                <a href="#"><img src="images/book/tesila.png"/></a>
+            <li data-category="reading">
+                <a href="#"><img src="images/book/tesila.png" alt="特斯拉：电气时代的开创者"/></a>
                 <p>特斯拉，电气时代的开创者</p>
             </li>
         </ul>
