--- a/index.html
+++ b/index.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zh-CN">
 
 	<head>
 
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-		<meta name="description" content="">
-		<meta name="author" content="">
+		<meta name="description" content="CodeClub - 程序员技术博客与学习资源导航，分享编程知识、技术文章和优质图书推荐">
+		<meta name="keywords" content="编程,代码,技术博客,程序员,学习资源,Python,Java,JavaScript">
+		<meta name="author" content="Jackson">
 
 		<title>CodeClub</title>
 		<link rel="icon" type="image/x-ico" href="./img/logo.png" />
