--- a/blog.html
+++ b/blog.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zh-CN">
 
 <head>
 
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="">
-    <meta name="author" content="">
+    <meta name="description" content="Jackson的技术博客 - 分享编程心得、技术文章和学习笔记">
+    <meta name="keywords" content="技术博客,编程文章,开发经验,学习笔记">
+    <meta name="author" content="Jackson">
 
     <title>CodeClub</title>
     <link rel="icon" type="image/x-ico" href="./img/logo.png" />
