--- a/nav.html
+++ b/nav.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zh-CN">
 
 <head>
 
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="">
-    <meta name="author" content="">
+    <meta name="description" content="程序员网址导航 - 精选AI工具、学习资源、开发工具、技术社区等优质网站">
+    <meta name="keywords" content="网址导航,程序员导航,AI工具,学习网站,开发工具,技术社区">
+    <meta name="author" content="Jackson">
 
     <title>CodeClub</title>
     <link rel="icon" type="image/x-ico" href="./img/logo.png" />
@@ -73,136 +74,8 @@
     </header>
 
     <section class="container-fluid custom-section-left">
-        <div class="row">
-            <div class="col-12">
-                <dl class="sitelist_1">
-                    <dt>主页/搜索</dt>
-                    <dd>
-                        <ul class="list-inline">
-                            <li class="list-inline-item"><a target="_blank" href="https://jacksoncode.github.io">主页-io</a></li>
-                            <li class="list-inline-item"><a target="_blank" href="https://codeclub.bid">主页-new</a></li>
-                            <li class="list-inline-item"><a target="_blank" href="https://www.baidu.com">百度</a></li>
-                            <li class="list-inline-item"><a target="_blank" href="https://www.bing.com">Bing</a></li>
-                            <li class="list-inline-item"><a target="_blank" href="https://getitfree.cn/">正版中国</a></li>
-                            <li class="list-inline-item"><a target="_blank" href="https://www.jiumodiary.com">鸠摩捜书</a></li>
-                            <li class="list-inline-item"><a target="_blank" href="https://ebook2.lorefree.com/">LorFree</a></li>
-                            <li class="list-inline-item"><a target="_blank" href="https://liber3.eth.limo/">Liber3</a></li>
-                            <li class="list-inline-item"><a target="_blank" href="https://www.kgbook.com/">苦瓜书盘</a></li>
-                            <li class="list-inline-item"><a target="_blank" href="https://bookfere.com/">书伴</a></li>
-                            <li class="list-inline-item"><a target="_blank" href="https://www.pdfbook.cn/">PDF书籍</a></li>
-                            <li class="list-inline-item"><a target="_blank" href="https://www.bestcbooks.com/">计算机书控</a></li>
-                        </ul>
-                    </dd>
-                </dl>
-
-                <dl class="sitelist_1">
-                    <dt>常用网址</dt>
-                    <dd>
-                        <ul class="list-inline">
-                            <li class="list-inline-item"><a target="_blank" href="https://www.yeah.net">网易YEAH</a></li>
-                            <li class="list-inline-item"><a target="_blank" href="https://www.jd.com">京东</a></li>
-                            <li class="list-inline-item"><a target="_blank" href="https://www.taobao.com">淘宝</a></li>
-                            <li class="list-inline-item"><a target="_blank" href="https://www.dangdang.com">当当</a></li>
-                            <li class="list-inline-item"><a target="_blank" href="https://www.liaoxuefeng.com">廖雪峰官网</a></li>
-                            <li class="list-inline-item"><a target="_blank" href="https://study.163.com">网易云课堂</a></li>
-                            <li class="list-inline-item"><a target="_blank" href="https://www.coursera.org/">coursera</a></li>
-                            <li class="list-inline-item"><a target="_blank" href="https://github.com">Github</a></li>
-                            <li class="list-inline-item"><a target="_blank" href="https://www.gitbook.com">Gitbook</a></li>
-                            <li class="list-inline-item"><a target="_blank" href="https://www.runoob.com">菜鸟教程</a></li>
-                            <li class="list-inline-item"><a target="_blank" href="https://www.shiyanlou.com/">实验楼</a></li>
-                            <li class="list-inline-item"><a target="_blank" href="https://developer.mozilla.org/zh-CN/">MDN</a></li>
-                            <li class="list-inline-item"><a target="_blank" href="https://www.ituring.com.cn/">图灵社区</a></li>
-                            <li class="list-inline-item"><a target="_blank" href="https://www.epubit.com.cn/">异步社区</a></li>
-                            <li class="list-inline-item"><a target="_blank" href="https://sspai.com/matrix">少数派</a></li>
-                        </ul>
-                    </dd>
-                </dl>
-
-                <dl class="sitelist_1">
-                    <dt>AI工具</dt>
-                    <dd>
-                        <ul class="list-inline">
-                            <li class="list-inline-item"><a target="_blank" href="https://ai-bot.cn">AI工具集</a></li>
-                            <li class="list-inline-item"><a target="_blank" href="https://xinghuo.xfyun.cn/desk">讯飞星火</a></li>
-                            <li class="list-inline-item"><a target="_blank" href="https://kimi.moonshot.cn/">Kimi</a></li>
-                            <li class="list-inline-item"><a target="_blank" href="https://chat.deepseek.com/">deepseek</a></li>
-                            <li class="list-inline-item"><a target="_blank" href="https://chatglm.cn/">智谱清言</a></li>
-                            <li class="list-inline-item"><a target="_blank" href="https://www.doubao.com/chat/">豆包</a></li>
-                            <li class="list-inline-item"><a target="_blank" href="https://ima.qq.com/">IMA</a></li>
-                            <li class="list-inline-item"><a target="_blank" href="https://tongyi.aliyun.com/">通义千问</a></li>
-                            <li class="list-inline-item"><a target="_blank" href="https://chat.qwen.ai/">QWEN</a></li>
-                            <li class="list-inline-item"><a target="_blank" href="https://claude.ai/new/">Claude</a></li>
-                            <li class="list-inline-item"><a target="_blank" href="https://ollama.org">ollama</a></li>
-                            <li class="list-inline-item"><a target="_blank" href="https://poe.com/chat">Poe</a></li>
-                            <li class="list-inline-item"><a target="_blank" href="https://grok.com/chat">Grok</a></li>
-                            <li class="list-inline-item"><a target="_blank" href="https://gemini.google.com">Gemini</a></li>
-                            <li class="list-inline-item"><a target="_blank" href="https://www.marscode.cn/">MarsCode</a></li>
-                            <li class="list-inline-item"><a target="_blank" href="https://gamma.app/zh-cn">Gamma</a></li>
-                            <li class="list-inline-item"><a target="_blank" href="https://www.aippt.cn/">AIPPT</a></li>
-                        </ul>
-                    </dd>
-                </dl>
-
-                <dl class="sitelist_1">
-                    <dt>Python</dt>
-                    <dd>
-                        <ul class="list-inline">
-                            <li class="list-inline-item"><a target="_blank" href="http://www.liaoxuefeng.com">廖雪峰官网</a></li>
-                            <li class="list-inline-item"><a target="_blank" href="https://python3-cookbook.readthedocs.io/zh_CN/latest/">Python Cookbook</a></li>
-                            <li class="list-inline-item"><a target="_blank" href="https://docs.python.org/zh-cn/3.8/">Python官方文档</a></li>
-                            <li class="list-inline-item"><a target="_blank" href="https://learnku.com/python/docs">Python文档翻译</a></li>
-                            <li class="list-inline-item"><a target="_blank" href="https://leetcode-cn.com/">LeetCode中文</a></li>
-                        </ul>
-                    </dd>
-                </dl>
-
-                <dl class="sitelist_1">
-                    <dt>学习</dt>
-                    <dd>
-                        <ul class="list-inline">
-                            <li class="list-inline-item"><a target="_blank" href="http://www.w3school.com.cn/">w3school</a></li>
-                            <li class="list-inline-item"><a target="_blank" href="https://developer.mozilla.org/zh-CN/">MDN</a></li>
-                            <li class="list-inline-item"><a target="_blank" href="http://study.163.com">网易云课堂</a></li>
-                            <li class="list-inline-item"><a target="_blank" href="http://www.imooc.com/">慕课网</a></li>
-                            <li class="list-inline-item"><a target="_blank" href="http://www.icourse163.org/">中国大学慕课</a></li>
-                            <li class="list-inline-item"><a target="_blank" href="https://www.bilibili.com">B站</a></li>
-                            <li class="list-inline-item"><a target="_blank" href="https://www.coursera.org/">coursera</a></li>
-                            <li class="list-inline-item"><a target="_blank" href="https://www.shiyanlou.com/">实验楼</a></li>
-                        </ul>
-                    </dd>
-                </dl>
-
-                <dl class="sitelist_1">
-                    <dt>写作</dt>
-                    <dd>
-                        <ul class="list-inline">
-                            <li class="list-inline-item"><a target="_blank" href="https://www.cnblogs.com/">博客园</a></li>
-                            <li class="list-inline-item"><a target="_blank" href="https://www.csdn.net/">CSDN</a></li>
-                            <li class="list-inline-item"><a target="_blank" href="https://www.oschina.net/">开源中国</a></li>
-                            <li class="list-inline-item"><a target="_blank" href="https://www.jianshu.com/">简书</a></li>
-                            <li class="list-inline-item"><a target="_blank" href="https://www.zhihu.com">知乎</a></li>
-                            <li class="list-inline-item"><a target="_blank" href="https://www.douban.com/">豆瓣</a></li>
-                            <li class="list-inline-item"><a target="_blank" href="https://mp.weixin.qq.com/">微信公众号</a></li>
-                        </ul>
-                    </dd>
-                </dl>
-
-                <dl class="sitelist_1">
-                    <dt>笔记/工具</dt>
-                    <dd>
-                        <ul class="list-inline">
-                            <li class="list-inline-item"><a target="_blank" href="https://www.madoko.net/editor.html">Markdown编辑器</a></li>
-                            <li class="list-inline-item"><a target="_blank" href="https://maxiang.io/">马克飞象</a></li>
-                            <li class="list-inline-item"><a target="_blank" href="https://tinypng.com/">图片压缩</a></li>
-                            <li class="list-inline-item"><a target="_blank" href="http://cli.im/">二维码生成器</a></li>
-                            <li class="list-inline-item"><a target="_blank" href="http://json.cn/">Json解析</a></li>
-                            <li class="list-inline-item"><a target="_blank" href="https://www.zybuluo.com/cmd/">Cmd Markdown</a></li>
-                            <li class="list-inline-item"><a target="_blank" href="http://tool.chinaz.com/">站长工具箱</a></li>
-                            <li class="list-inline-item"><a target="_blank" href="https://www.processon/">ProcessOn</a></li>
-                        </ul>
-                    </dd>
-                </dl>
-            </div>
+        <div id="nav-container">
+            <p class="text-center text-muted py-5">正在加载导航数据...</p>
         </div>
     </section>
 
@@ -247,6 +120,7 @@
     <script src="lib/jquery/jquery.js"></script>
     <script src="lib/bootstrap/js/bootstrap.bundle.min.js"></script>
     <script src="js/clean-blog.min.js"></script>
+    <script src="js/nav.js"></script>
 
 </body>
 
